modificacion styleOk.css

--- a/styleOk.css
+++ b/styleOk.css
@@ -383,6 +383,19 @@ font-weight: bolder;font-size: 30px;
 .bike{
 background-image: url(./icons/cafe.png);
 }
+@media only screen and (min-width:400px) {
+    .sectionCafeOk{
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: repeat(4, 1fr);
+        grid-template-areas: 
+        "cafe cafe" 
+        "amigos biker"
+        "delicatessen delicatessen";
+       
+    }
+}
 
 /*Taller*/
 
