--- a/styleOk.css
+++ b/styleOk.css
@@ -618,11 +618,13 @@ color: #fff;}
 }
 
 
-/*Nosotros*/
+/*Nosotros BS*/
+
 .nosotros{
     background-color: black;
-    --bs-gutter-x: 0 !important;
+     --bs-gutter-x: 0 !important;
 }
+
 .nosotros div h1{
     margin-top: 15px;
     margin-left: 10px;
@@ -632,6 +634,7 @@ color: #fff;}
     font-weight: bolder;
     text-shadow: 0 0 5px black;
 }
+
 #carouselExampleIndicators{
     height: 300px;
     border: 5px solid black;
@@ -645,45 +648,31 @@ color: #fff;}
     background-size: cover;
     background-position: center;
     }
-
-
-
-    
-.agustin1, .agustin2{
-    display: block;
-    width: 70%;
-border-radius: 50%;
-border: 2px solid black;
-}
-.agustin1{
-    margin-left: 10px;
-    margin-top: 30px;
-    
-}
-.agustin2{
-    margin-left: 45%;
-    margin-top: -20%;
-    margin-bottom: 20px;
-}
-
 .nosotrostercio2{
-    width: 100%;
 text-align: center;
 }
 .nosotrostercio2 p{
-height: auto;
-width: 80%;
-padding: 30px;
-margin-top: 60px;
-margin-left: 60px;
+    text-align: center;
+padding: 20px;
 border: 2px solid black;
 color: #D6D6D6;
+letter-spacing: 2px;
+word-spacing: 1px;
+}
+.nosotrostercio3{
+    
+    text-align: center;
+    padding: 10px;
+}
+.nosotrosrwecio3 p{
+    padding: 10px;
+    letter-spacing: 2px;
+    word-spacing: 2px;
 }
 video{
-    width: 100%;
-    height: auto;
-    padding: 20px;
+    height: 400px;
 }
+
 
 
 
