--- a/styleOk.css
+++ b/styleOk.css
@@ -275,62 +275,6 @@ margin-bottom: 15px;
     }
     
 
-/*Cafe*/
-
-.sectionCafe{
-    width: 100%;
-    height: 450px;
-    background-color: rgba(0, 0, 0, 0.621);
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 1fr 1fr;
-    justify-items: center;
-    align-items: center;
-}
-.items{
-    display: grid;
-    width: 100%;
-    height: 225px;
-    border: 2px solid black;
-    background-size: cover;
-    background-position: center;
-    justify-items: center;
-    font-size: 50px;
-    color: #D6D6D6;
-    font-weight: bolder;
-    justify-self: center;
-align-items: center;
-filter:opacity(80%);
-transition: all 0.9s;
-}
-
-.items:hover{
-    filter:opacity(100%);
-    transform: scale(1.02);
-}
-.item2{
-background-image: url(./imagenes/coffee-2560260_1280.jpg);
-}
-.item3 img{
-width: 133px;
-}
-.item4{
-    background-image: url(./imagenes/silloncafeteria.webp);
-}
-.item5{
-    background-image: url(./imagenes/barrabikeplace.webp);
-}
-.item6 img{
-    width: 133px;
-    height: auto; 
-}
-.item7{
-    background-image: url(./imagenes/medialuna2.webp) ;
-}
-.item8 img{
-    width: 133px; 
-}
-
 /*CAfe ok*/
 .sectionCafeOk{
     background-color: black;
@@ -442,19 +386,21 @@ filter: opacity(0.9);
 /*Taller*/
 
 .sectionTaller{
-    background-color: rgba(0, 0, 0, 0.621);
+    background-color: black;
     display: flex;
     flex-direction: column;
 }
 
-.sectionTaller a{
-    font-size: 40px;
-    margin-right: 50px;
+.tallerTercio1{
+    height: 40px;
 }
+
 .sectionTaller img{
-    width: 30%;
+    width: 40%;
     border: 2px solid black;
     margin:30px;
+    background-size: cover;
+    background-position: center;
 }
 .tallerTercio1{
     height: 40px;
@@ -478,11 +424,12 @@ display: flex;
 margin-top: 10px;
 }
 .tallerTercio2 p{
+    font-size: 25px;
     text-align: center;
     align-self: center;
     color: #D6D6D6;
     margin: 3px;
-    margin: 0px ;
+    margin: 0px;
 }
 .tallerTercio2 p a{
     font-size: 25px;
@@ -496,6 +443,7 @@ margin-top: 10px;
     margin: 2px;
 }
 .tallerForm label{
+    color: #FFFFFF;
     font-weight: bolder;
     margin-left: 10px;
 }
@@ -514,6 +462,19 @@ width: 10%;
 align-self: center;
 margin: 0px 0px 30px 70px;
 }    
+
+@media only screen and (max-width:656px){
+    .tallerTercio2{
+display: flex;
+flex-direction: column;   
+}
+.sectionTaller img{
+    width: 100vw;
+    margin: 0px;
+    border: none;
+}
+}
+
 
 /*Rodadas*/
 
