--- a/styleOk.css
+++ b/styleOk.css
@@ -8,7 +8,7 @@
     font-style: normal;
 }
 
-
+/*
 header{
     height: 70px;
     display: flex;
@@ -55,10 +55,18 @@ border: 2px solid black;
 .menuu a ul{
     display: block;
 }
+*/
 nav{
-    width: 50%;
-    height: auto;
+    width: 100%;
     display: none;
+}
+.navbar-brand img{
+    height: 80px;
+}
+.nav-item{
+}
+.nav-link{
+    font-size: 25px;
 }
 ul{
     width: 100%;
