--- a/styleOk.css
+++ b/styleOk.css
@@ -6,54 +6,6 @@
     font-style: normal;
 }
 
-/*
-header{
-    height: 70px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: black;
-}
-.logoo{
-    width: 190px;
-    height: 70px;
-    background-image: url(./imagenes/logoreal2.png);
-    background-size: cover;
-    background-position: center;
-}
-.menuu{
-    width: 100px;
-font-size: 30px;
-color: white;
-margin-right: 10px;
-text-align: end;
-position: absolute;
-top: 5px;
-right: 10px;
-}
-
-
-.ulHamburguesa{
-    flex-direction: column;
-    width: 100%;
-    margin: 0px !important;
-    padding: 2px !important;
-    background-color: rgba(250, 1, 1, 0.468);
-    border: 2px solid black;
-}
-.liHambuguesa{
-padding: 0px !important;
-font-size: 5px !important;
-border: 2px solid black;
-}
-.aHamburguesa{
-    font-size: 15px;
-}
-
-.menuu a ul{
-    display: block;
-}
-*/
 
 nav {
     width: 100%;
@@ -206,59 +158,76 @@ footer h5 {
     margin-top: 10px;
 }
 
-/*Tienda*/
+/*Media query header-index-footer*/
 
-.sectionTienda {
-    background-color: black;
-    display: flex;
-    flex-direction: column;
-}
-
-.sectionTienda h1 {
-    width: 228px;
-    font-size: 40px;
-    color: #FFFFFF;
-    margin-left: 40px;
-    margin-top: 10px;
-    padding: 2px;
-    background-color: #151212;
-}
-
-#tablaTienda {
-    text-align: center;
-}
-
-th a,
-td a strong {
-    font-size: 50px;
-    color: #D6D6D6;
-    font-weight: bolder;
+@media only screen and (max-width:480px) {
+    .nav {
+        display: none !important;
+    }
 
 }
 
-td a strong:hover {
-    text-shadow: 0 0 5px #FFFFFF;
+@media only screen and (min-width: 480px) {
+    .nav {
+        display: none !important;
+    }
+
+    .index div {
+        height: 300px;
+        width: auto;
+        line-height: 300px;
+    }
+
+    footer h5 {
+        font-size: 16px;
+    }
+
+    .redesSociales a {
+        padding: 15px;
+    }
+
+    .conocenos {
+        font-size: 15px;
+    }
 }
 
-th a:hover {
-    text-shadow: 0 0 5px #FFFFFF;
+@media only screen and (min-width: 700px) {
+    .nav {
+        display: block !important;
+    }
+
+    .menuu {
+        display: none !important;
+    }
+
+
+    .index {
+        background-color: black;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .index div {
+        width: 45%;
+    }
+
+    .redesSociales a {
+        font-size: 30px;
+        padding: 20px;
+    }
+
+    .conocenos {
+        font-size: 20px;
+    }
 }
 
-.imgTienda1,
-.imgTienda2,
-.imgTienda3 {
-    width: 60%;
-    text-align: center;
-    opacity: 80%;
-    border: 2px solid black;
-}
+@media only screen and (min-width: 768px) {
 
-.imgTienda2 {
-    margin-top: 20px;
-}
-
-.imgTienda3 {
-    margin-bottom: 15px;
+    .navbar-collapse {
+        background-color: black;
+        position: static;
+    }
 }
 
 
@@ -268,40 +237,26 @@ th a:hover {
 }
 .row {
     --bs-gutter-x: 0px;
-    margin-top: 10px;
 }
 .tienda{
     text-align: center;
     line-height: 100px;
-    text-transform: uppercase;
+font-size: 30px;
     font-weight: bolder;
     color: #FFFFFF;
     
 }
-.bici{
-    background-image: url(./imagenes/bici1.jpg);
-    height: 100px;
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
 
-}
-.accesorios{
-    background-image: url(./imagenes/casco1.jpg);
-    height: 100px;
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-}
-.indumentaria{
-    background-image: url(./imagenes/ropa1.webp);
-    height: 100px;
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-}
 @media only screen and (min-width:500px) {
     .tienda{
+        height: 150px;
+        line-height: 150px;
+    }
+    .bici{
+        width: 50%;
+    }
+    .accesorios{
+        width: 50%;
     }
     
 }
@@ -309,7 +264,7 @@ th a:hover {
 /*secciones de Tienda*/
 
 .sectionProductos {
-    background-color: rgba(0, 0, 0, 0.621);
+    background-color: black;
     display: flex;
     flex-direction: column;
 }
@@ -321,7 +276,7 @@ th a:hover {
     font-weight: bolder;
     margin-left: 10px;
     margin-top: 10px;
-    background-color: #020202;
+    background-color: rgba(111, 109, 109, 0.396);
     width: 250px;
     border-radius: 10px;
     text-align: center;
@@ -351,6 +306,7 @@ th a:hover {
     color: rgb(155, 2, 2);
     text-shadow: 0 0 3px black;
     margin-bottom: 10px;
+    font-weight: bolder;
 }
 
 .card img {
@@ -363,6 +319,8 @@ th a:hover {
 .card p {
     font-size: 20px;
     margin-bottom: 15px;
+    font-weight: bolder;
+    color: #FFFFFF;
 }
 
 .card a {
@@ -381,7 +339,8 @@ th a:hover {
 
 .volverTienda {
     width: 54px;
-    height: 25px;
+    height: 30px;
+    line-height: 30px;
     background-color: rgba(155, 2, 2, 0.82);
     font-size: 20px;
     position: fixed;
@@ -389,6 +348,7 @@ th a:hover {
     right: 0px;
     border: 2px solid black;
     margin-bottom: 17px;
+    margin-right: 2px;
 }
 
 .volverTienda:hover {
@@ -421,7 +381,6 @@ th a:hover {
 .cafe {
     height: 150px;
     width: auto;
-    /*le quiero agregar espaciado entre img pero se me sale del margen derecho*/
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -482,6 +441,7 @@ th a:hover {
     grid-area: espacio;
 }
 
+/*media query CAFE*/
 @media only screen and (min-width:500px) {
     .sectionCafeOk {
         display: grid;
@@ -517,16 +477,14 @@ th a:hover {
     }
 }
 
-/*Taller*/
 
+/*Taller*/
 .sectionTaller {
     background-color: black;
     display: flex;
     flex-direction: column;
     --bs-gutter-x: opx;
 }
-
-
 
 .sectionTaller img {
     width: 100%;
@@ -558,11 +516,17 @@ th a:hover {
     width: 60%;
     align-self: center;
 }
+.form-select {
+    font-weight: bolder;
+}
+.form-select option {
+    font-size: 15px !important;
+    font-weight: bolder;
+}
 
 .form-control {
     height: 10px !important;
 }
-
 .form-floating label {
     padding: 3px !important;
     font-weight: bolder;
@@ -570,54 +534,10 @@ th a:hover {
 
 .mb-3 {
     margin: 3px !important;
-
 }
-
-.form-select {
-    font-weight: bolder;
-}
-
-.form-select option {
-    font-size: 15px !important;
-    font-weight: bolder;
-}
-
 .btn {
     margin: 20px 0px;
     font-weight: bolder;
-}
-
-
-.tallerForm {
-    width: 100%;
-    text-align: center;
-}
-
-.tallerForm form {
-    margin: 2px;
-}
-
-.tallerForm label {
-    color: #FFFFFF;
-    font-weight: bolder;
-    margin-left: 5px;
-}
-
-.tallerForm input {
-    margin: 5px;
-}
-
-#textarea {
-    width: 200px;
-    height: 100px;
-    font-size: 15px;
-    text-align: start;
-}
-
-.tallerForm img {
-    width: 10%;
-    align-self: center;
-    margin: 0px 0px 30px 70px;
 }
 
 @media only screen and (min-width:576) {
@@ -823,82 +743,3 @@ video {
     height: 400px;
 }
 
-
-
-
-
-
-
-
-
-/*comienzan media query*/
-
-@media only screen and (max-width:480px) {
-    .nav {
-        display: none !important;
-    }
-
-}
-
-@media only screen and (min-width: 480px) {
-    .nav {
-        display: none !important;
-    }
-
-    .index div {
-        height: 300px;
-        width: auto;
-        line-height: 300px;
-    }
-
-    footer h5 {
-        font-size: 16px;
-    }
-
-    .redesSociales a {
-        padding: 15px;
-    }
-
-    .conocenos {
-        font-size: 15px;
-    }
-}
-
-@media only screen and (min-width: 700px) {
-    .nav {
-        display: block !important;
-    }
-
-    .menuu {
-        display: none !important;
-    }
-
-
-    .index {
-        background-color: black;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-
-    .index div {
-        width: 45%;
-    }
-
-    .redesSociales a {
-        font-size: 30px;
-        padding: 20px;
-    }
-
-    .conocenos {
-        font-size: 20px;
-    }
-}
-
-@media only screen and (min-width: 768px) {
-
-    .navbar-collapse {
-        background-color: black;
-        position: static;
-    }
-}
