--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,4 @@
+@import "reset";
 @import "header";
 @import "indexMain";
 @import "footer";
@@ -10,10 +11,3 @@
 
 
 
-*{
-    margin: 0;
-    padding: 0;
-    font-family: "Amatic SC", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-}
