--- a/styleOk.css
+++ b/styleOk.css
@@ -1,10 +1,17 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Amatic SC", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 nav {
   width: 100%;
   display: none;
 }
-
-.navbar-nav {
-  align-items: flex-end;
+nav div.container-fluid a.navbar-brand img {
+  height: 80px;
 }
 
 .navbar-collapse {
@@ -14,37 +21,26 @@ nav {
   top: 80px;
   right: 13px;
 }
-
-.navbar-brand img {
-  height: 80px;
-}
-
-.nav-link {
-  font-size: 25px;
-}
-
-ul {
+.navbar-collapse ul {
   width: 100%;
   display: flex;
   justify-content: end;
   list-style: none;
+  align-items: flex-end;
 }
-
-a {
+.navbar-collapse ul li {
+  padding: 10px;
+}
+.navbar-collapse ul li:hover {
+  text-shadow: rgb(204, 201, 201) -1px -1px;
+}
+.navbar-collapse ul li a {
   text-decoration: none;
   font-size: 30px;
   font-weight: bolder;
   color: #FFFFFF !important;
   font-size: auto;
   letter-spacing: 2px;
-}
-
-li {
-  padding: 10px;
-}
-
-li a:hover {
-  text-shadow: rgb(204, 201, 201) -1px -1px;
 }
 
 @media only screen and (max-width: 480px) {
@@ -689,14 +685,6 @@ footer h5 {
 
 video {
   height: 400px;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  font-family: "Amatic SC", sans-serif;
-  font-weight: 400;
-  font-style: normal;
 }
 
 /*# sourceMappingURL=styleOk.css.map */
