aplicando anidaciones sass en indexMain.scss

--- a/sass/_indexMain.scss
+++ b/sass/_indexMain.scss
@@ -1,28 +1,40 @@
-
 .index {
     display: grid;
     width: 100%;
-}
 
-.index div {
-    height: 150px;
-    border: 10px solid black;
-    transition: all 0.9s;
-}
+    div {
+        height: 150px;
+        border: 10px solid black;
+        transition: all 0.9s;
 
-.index div:hover {
-    transform: scale(1.01);
-}
+        &:hover {
+            transform: scale(1.01);
 
-.indexCafe,
-.indexRodadas,
-.indexTaller,
-.indexTienda {
-    display: block;
-    background-size: cover;
-    background-position: center;
-    text-align: center;
-    line-height: 150px;
+        }
+
+        a {
+            text-decoration: none;
+            color: white;
+            font-size: 40px;
+            font-weight: bold;
+
+            &:hover {
+                text-shadow: 0 0 10px rgb(245, 244, 244);
+            }
+        }
+    }
+
+    .indexCafe,
+    .indexRodadas,
+    .indexTaller,
+    .indexTienda {
+        display: block;
+        background-size: cover;
+        background-position: center;
+        text-align: center;
+        line-height: 150px;
+    }
+
 }
 
 .indexCafe {
@@ -41,32 +53,24 @@
     background-image: url(./imagenes/bicispared.webp);
 }
 
-.index div a {
-    text-decoration: none;
-    color: white;
-    font-size: 40px;
-    font-weight: bold;
-}
 
-.index div a:hover {
-    text-shadow: 0 0 10px rgb(245, 244, 244);
-}
 @media only screen and (min-width: 480px) {
     .index div {
         height: 300px;
         width: auto;
-        line-height: 300px;
+        line-height: 300px !important;
     }
 }
+
 @media only screen and (min-width: 700px) {
     .index {
         background-color: black;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-    }
 
-    .index div {
-        width: 45%;
+        div {
+            width: 45%;
+        }
     }
 }
