--- a/styleOk.css
+++ b/styleOk.css
@@ -137,7 +137,6 @@ footer {
   display: flex;
   justify-content: space-between;
 }
-
 footer h5 {
   padding: 5px 2px;
   margin-left: 5px;
@@ -148,22 +147,38 @@ footer h5 {
   align-items: center;
 }
 
+/*footer h5 {
+    padding: 5px 2px;
+    margin-left: 5px;
+    color: #FFFFFF;
+    font-size: 13px;
+    font-weight: bolder;
+    text-align: center;
+    align-items: center;
+}*/
 .redesSociales {
   display: block;
   text-align: center;
   line-height: 70px;
 }
-
 .redesSociales a {
   font-size: 20px;
   color: white;
   padding: 3px;
 }
-
 .redesSociales a:hover {
   text-shadow: 5px 5px 10px white, -5px -5px 10px white;
 }
 
+/*.redesSociales a {
+    font-size: 20px;
+    color: white;
+    padding: 3px;
+}*/
+/*.redesSociales a:hover {
+    text-shadow: 5px 5px 10px white,
+        -5px -5px 10px white;
+}*/
 .conocenos {
   width: 20%;
   background-image: url(./imagenes/logoreal2.png);
