--- a/styleOk.css
+++ b/styleOk.css
@@ -632,7 +632,6 @@ footer h5 {
   background-color: black;
   --bs-gutter-x: 0 !important;
 }
-
 .nosotros div h1 {
   margin-top: 15px;
   margin-left: 10px;
@@ -642,28 +641,23 @@ footer h5 {
   font-weight: bolder;
   text-shadow: 0 0 5px black;
 }
-
-#carouselExampleIndicators {
+.nosotros #carouselExampleIndicators {
   height: 300px;
   border: 5px solid black;
   background-position: center;
   background-size: contain;
 }
-
-.carousel-inner {
+.nosotros #carouselExampleIndicators .carousel-inner {
   height: 300px;
 }
-
-.carousel-item {
+.nosotros #carouselExampleIndicators .carousel-inner .carousel-item {
   background-size: cover;
   background-position: center;
 }
-
-.nosotrostercio2 {
+.nosotros .nosotrostercio2 {
   text-align: center;
 }
-
-.nosotrostercio2 p {
+.nosotros .nosotrostercio2 p {
   text-align: center;
   padding: 20px;
   border: 2px solid black;
@@ -671,20 +665,64 @@ footer h5 {
   letter-spacing: 2px;
   word-spacing: 1px;
 }
-
-.nosotrostercio3 {
+.nosotros .nosotrostercio3 {
   text-align: center;
   padding: 10px;
 }
-
-.nosotrosrwecio3 p {
+.nosotros .nosotrostercio3 p {
   padding: 10px;
   letter-spacing: 2px;
   word-spacing: 2px;
 }
-
-video {
+.nosotros .nosotrostercio3 video {
   height: 400px;
 }
+
+/*.nosotros div h1 {
+    margin-top: 15px;
+    margin-left: 10px;
+    font-size: 30px;
+    background-color: black;
+    color: white;
+    font-weight: bolder;
+    text-shadow: 0 0 5px black;
+}*/
+/*#carouselExampleIndicators {
+    height: 300px;
+    border: 5px solid black;
+    background-position: center;
+    background-size: contain;
+}*/
+/*.carousel-inner {
+    height: 300px;
+}*/
+/*.carousel-item {
+    background-size: cover;
+    background-position: center;
+}*/
+/*.nosotrostercio2 {
+    text-align: center;
+}*/
+/*.nosotrostercio2 p {
+    text-align: center;
+    padding: 20px;
+    border: 2px solid black;
+    color: #D6D6D6;
+    letter-spacing: 2px;
+    word-spacing: 1px;
+}*/
+/*.nosotrostercio3 {
+
+    text-align: center;
+    padding: 10px;
+}*/
+/*.nosotrosrwecio3 p {
+    padding: 10px;
+    letter-spacing: 2px;
+    word-spacing: 2px;
+}*/
+/*video {
+    height: 400px;
+}*/
 
 /*# sourceMappingURL=styleOk.css.map */
