--- a/styleOk.css
+++ b/styleOk.css
@@ -254,8 +254,7 @@ footer h5 {
   display: flex;
   flex-direction: column;
 }
-
-.tituloProductos {
+.sectionProductos .tituloProductos {
   display: block;
   font-size: 40px;
   color: #FFFFFF;
@@ -267,16 +266,14 @@ footer h5 {
   border-radius: 10px;
   text-align: center;
 }
-
-.productos {
+.sectionProductos .productos {
   height: 100%;
   width: 100%;
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
 }
-
-.card {
+.sectionProductos .productos .card {
   height: auto;
   width: 250px;
   border: 2px solid black;
@@ -285,30 +282,29 @@ footer h5 {
   text-align: center;
   margin: 30px;
 }
-
-.card h1 {
+.sectionProductos .productos .card h1 {
   font-size: 30px;
   color: rgb(155, 2, 2);
   text-shadow: 0 0 3px black;
   margin-bottom: 10px;
   font-weight: bolder;
 }
-
-.card img {
+.sectionProductos .productos .card img {
   height: 150px;
   width: 100%;
   border: 1px solid black;
 }
-
-.card p {
+.sectionProductos .productos .card p {
   font-size: 20px;
   margin-bottom: 15px;
   font-weight: bolder;
   color: #FFFFFF;
 }
-
-.card a {
+.sectionProductos .productos .card a {
   width: 100%;
+  text-decoration: none;
+  color: #FFFFFF;
+  font-weight: bolder;
   background-color: black;
   font-size: 25px;
   padding: 2px 5px;
@@ -316,12 +312,17 @@ footer h5 {
   border-radius: 10px;
   margin: 0px;
 }
-
-.card a:hover {
+.sectionProductos .productos .card a:hover {
   text-shadow: 0 0 9px #fff;
 }
-
-.volverTienda {
+.sectionProductos .productos .card .ropa {
+  object-fit: contain;
+  background-color: white;
+}
+.sectionProductos .productos .volverTienda {
+  color: #FFFFFF;
+  text-decoration: none;
+  font-weight: bolder;
   width: 54px;
   height: 30px;
   line-height: 30px;
@@ -334,14 +335,8 @@ footer h5 {
   margin-bottom: 17px;
   margin-right: 2px;
 }
-
-.volverTienda:hover {
+.sectionProductos .productos .volverTienda:hover {
   box-shadow: 0 0 15px rgb(255, 254, 254);
-}
-
-.ropa {
-  object-fit: contain;
-  background-color: white;
 }
 
 .sectionCafeOk {
