--- a/sass/_tienda.scss
+++ b/sass/_tienda.scss
@@ -1,24 +1,38 @@
 .mainTienda {
     background-color: black;
-}
-.mainTienda div h1{
-    font-size: 40px;
-}
-.mainTienda div p{
-    font-size: 20px;
-}
-.row {
-    --bs-gutter-x: 0px;
+
+    h1 {
+        font-size: 40px;
+    }
+
+    p {
+        font-size: 20px;
+    }
+
+    .row {
+        --bs-gutter-x: 0px;
+
+        .tienda {
+            text-align: center;
+            line-height: 100px;
+            font-size: 30px;
+            font-weight: bolder;
+            color: #FFFFFF;
+
+            a {
+                text-decoration: none;
+                color: #FFFFFF;
+                font-weight: bolder;
+
+                &:hover {
+                    text-shadow: 0 0 9px #fff;
+
+                }
+            }
+        }
+    }
 }
 
-.tienda {
-    text-align: center;
-    line-height: 100px;
-    font-size: 30px;
-    font-weight: bolder;
-    color: #FFFFFF;
-
-}
 
 @media only screen and (min-width:500px) {
     .tienda {
