--- a/styleOk.css
+++ b/styleOk.css
@@ -216,25 +216,29 @@ footer h5 {
 .mainTienda {
   background-color: black;
 }
-
-.mainTienda div h1 {
+.mainTienda h1 {
   font-size: 40px;
 }
-
-.mainTienda div p {
+.mainTienda p {
   font-size: 20px;
 }
-
-.row {
+.mainTienda .row {
   --bs-gutter-x: 0px;
 }
-
-.tienda {
+.mainTienda .row .tienda {
   text-align: center;
   line-height: 100px;
   font-size: 30px;
   font-weight: bolder;
   color: #FFFFFF;
+}
+.mainTienda .row .tienda a {
+  text-decoration: none;
+  color: #FFFFFF;
+  font-weight: bolder;
+}
+.mainTienda .row .tienda a:hover {
+  text-shadow: 0 0 9px #fff;
 }
 
 @media only screen and (min-width: 500px) {
